Fixes for flash message notifcations covering other portions of the UI (#1165)
* Fixes for flash messages covering other portions of the UI

* Compiled and minified changed css files

--- a/tethys_apps/static/tethys_apps/less/app_base.less
+++ b/tethys_apps/static/tethys_apps/less/app_base.less
@@ -331,11 +331,12 @@ body {
 .flash-messages {
   position: absolute;
   top: 75px;
-  left: 0;
-  width: 100%;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%);
 
   .alert {
-    width: 50%;
+    width: 100%;
   }
 }
 
